--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Angular 2 material-like Select Component",
   "scripts": {
     "prepublish": "npm run build && ./node_modules/.bin/tsc -p tsconfig.json",
-    "build": "webpack --inline --colors --progress --display-error-details --display-cached",
+    "build": "webpack --colors --progress --display-error-details --display-cached",
     "watch": "npm run build -- --watch",
     "server": "webpack-dev-server --config webpack.demo.js --inline --colors --progress --display-error-details --display-cached --port 3003  --content-base demo",
     "start": "npm run server",
@@ -56,9 +56,9 @@
     "ts-helpers": "1.1.1",
     "ts-node": "^0.7.3",
     "tslint": "^3.5.0",
-    "typescript": "2.0.2",
+    "typescript": "2.0.10",
     "url-loader": "^0.5.7",
-    "webpack": "^1.13.1",
+    "webpack": "2.1.0-beta.25",
     "webpack-dev-server": "^1.14.0",
     "webpack-merge": "^0.8.4",
     "zone.js": "~0.6.23"
